Slow on Windows #29 Revert #31